add some about section

--- a/src/index.html
+++ b/src/index.html
@@ -36,6 +36,24 @@
             </div>
         </div>
     </nav>
+        <section id="profile">
+            <div class="section__pic-contanier">
+                <img src="images/profile.png" alt="camille profile">
+            </div>
+            <div class="section__text">
+                <p class="section__text__p1">Hello I'm</p>
+                <p class="tittle">Camille Barola</p>
+                <p class="section__text__p2">Front-end developer</p>
+                <div class="btn-container">
+                    <button class="btn btn-color-2" onclick="window.open('images/cvsamples.pdf')">Download CV</button>
+                    <button class="btn btn-color-1" onclick="location.href='#contacts'">Contacts Info</button>
+                </div>
+                <div id="socila-container">
+                    <img src="images/linkedin.png" alt="link in profile" class="icon" onclick="location.href='https://www.linkedin.com/company/login/'">
+                    <img src="images/githhub.png" alt="link in profile" class="icon" onclick="location.href='https://github.com/Xamilla'">
+                </div>
+            </div>
+        </section>
     <script src="JS/index.js"></script>
 </body>
 </html>
