add new features in about section

--- a/src/index.html
+++ b/src/index.html
@@ -38,7 +38,7 @@
     </nav>
         <section id="profile">
             <div class="section__pic-contanier">
-                <img src="images/profile.png" alt="camille profile">
+                <img src="images/profile1.png" alt="camille profile">
             </div>
             <div class="section__text">
                 <p class="section__text__p1">Hello I'm</p>
