add some about me features

--- a/src/index.html
+++ b/src/index.html
@@ -49,10 +49,43 @@
                     <button class="btn btn-color-1" onclick="location.href='#contacts'">Contacts Info</button>
                 </div>
                 <div id="socila-container">
-                    <img src="images/linkedin.png" alt="link in profile" class="icon" onclick="location.href='https://www.linkedin.com/company/login/'">
-                    <img src="images/githhub.png" alt="link in profile" class="icon" onclick="location.href='https://github.com/Xamilla'">
+                    <img src="images/linkedin.png" alt="linkedin profile" class="icon" onclick="location.href='https://www.linkedin.com/company/login/'">
+                    <img src="images/githhub.png" alt="github profile" class="icon" onclick="location.href='https://github.com/Xamilla'">
                 </div>
             </div>
+        </section>
+        <section id="about">
+            <p class="section__text__p1">Get to know more</p>
+            <h1 class="title">About Me</h1>
+            <div class="section-container">
+                <div class="section__pic-container">
+                    <img src="images/about-me.jpg" alt="about me profile" class="about-pic">
+                </div>
+                <div class="about-details-container">
+                    <div class="about-containers">
+                        <div class="details-container">
+                            <img src="images/about-me-experience.png" alt="about me icon " class="icon">
+                            <h3>Experience</h3>
+                            <p>2+years <br> Front development</p>
+                        </div>
+                            <div class="detials-container">
+                                <img src="images/education-about-me.png" alt="about me icon " class="icon">
+                                <h3>Education</h3>
+                                <p>Current:rd BSIT Student<br>Saint Joseph College</p>
+                            </div>
+                    </div>
+                        <div class="text-container">
+                            <p>
+                                As an aspiring front-end developer, you're passionate about creating visually appealing and user-friendly
+                                websites. You have a keen eye for design, combined with a strong interest in learning the latest web technologies. 
+                                You're always looking to improve your skills in HTML, CSS, JavaScript, and frameworks to bring your ideas to life. 
+                                With a focus on user experience, you strive to craft seamless, responsive interfaces that engage users. 
+                                Your dedication to growing as a developer drives you to keep up with trends and continuously challenge yourself.
+                            </p>
+                        </div>
+                </div>
+            </div>
+            <img src="images/arrow-for-scroll-down.png" alt="" class="icon arrow" onclick="location.href='./experience'">
         </section>
     <script src="JS/index.js"></script>
 </body>
