finished about section`

--- a/src/index.html
+++ b/src/index.html
@@ -68,10 +68,10 @@
                             <h3>Experience</h3>
                             <p>2+years <br> Front development</p>
                         </div>
-                            <div class="detials-container">
+                            <div class="details-container">
                                 <img src="images/education-about-me.png" alt="about me icon " class="icon">
                                 <h3>Education</h3>
-                                <p>Current:rd BSIT Student<br>Saint Joseph College</p>
+                                <p>Current:3rd BSIT Student<br>Saint Joseph College</p>
                             </div>
                     </div>
                         <div class="text-container">
@@ -85,7 +85,7 @@
                         </div>
                 </div>
             </div>
-            <img src="images/arrow-for-scroll-down.png" alt="" class="icon arrow" onclick="location.href='./experience'">
+            <img src="images/arrow-for-scroll-down.png" alt="" class="icon arrow" onclick="location.href='./#experience'">
         </section>
     <script src="JS/index.js"></script>
 </body>
