making some adjustment

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
         <div>
             <ul class="nav-links">
                 <li><a href="#about">About</a></li>
-                <li><a href="#experince">Experience</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#project">Project</a></li>
                 <li><a href="#contacts">Contacts</a></li>
             </ul>
@@ -86,6 +86,25 @@
                 </div>
             </div>
             <img src="images/arrow-for-scroll-down.png" alt="" class="icon arrow" onclick="location.href='./#experience'">
+        </section>
+        <section id="experience">
+            <p class="section__text__p1">Expore My</p>
+            <h1 class="title">Experience</h1>
+            <div class="experience-details-container">
+                <div class="about-containers">
+                    <div class="detials-containers">
+                        <h2 class="experience-sub-title">Front end Development</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="" alt="" class="icon">
+                                <div>
+                                    <h3>html</h3>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
     <script src="JS/index.js"></script>
 </body>
