finished the experience section

--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,7 @@
                     <img src="images/githhub.png" alt="github profile" class="icon" onclick="location.href='https://github.com/Xamilla'">
                 </div>
             </div>
+            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#about'">
         </section>
         <section id="about">
             <p class="section__text__p1">Get to know more</p>
@@ -85,26 +86,75 @@
                         </div>
                 </div>
             </div>
-            <img src="images/arrow-for-scroll-down.png" alt="" class="icon arrow" onclick="location.href='./#experience'">
+            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#experience'">
         </section>
         <section id="experience">
             <p class="section__text__p1">Expore My</p>
             <h1 class="title">Experience</h1>
             <div class="experience-details-container">
                 <div class="about-containers">
-                    <div class="detials-containers">
+                    <div class="details-container">
                         <h2 class="experience-sub-title">Front end Development</h2>
                         <div class="article-container">
                             <article>
-                                <img src="" alt="" class="icon">
+                                <img src="images/check.png" alt="check" class="icon">
                                 <div>
                                     <h3>html</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="images/check.png" alt="check" class="icon">
+                                <div>
+                                    <h3>CSS</h3>
+                                    <p>Experienced</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="images/check.png" alt="check" class="icon">
+                                <div>
+                                    <h3>JavaScript</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="images/check.png" alt="check" class="icon">
+                                <div>
+                                    <h3>Java</h3>
+                                    <p>Intermediate</p>
+                                </div>
+                            </article>
+                        </div>
+                    </div>
+                    <div class="details-container">
+                        <h2 class="experience-sub-title">Front end Development</h2>
+                        <div class="article-container">
+                            <article>
+                                <img src="images/check.png" alt="" class="icon">
+                                <div>
+                                    <h3>SQL</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="images/check.png" alt="" class="icon">
+                                <div>
+                                    <h3>Github</h3>
+                                    <p>Basic</p>
+                                </div>
+                            </article>
+                            <article>
+                                <img src="images/check.png" alt="" class="icon">
+                                <div>
+                                    <h3>Postgres</h3>
+                                    <p>Basic</p>
                                 </div>
                             </article>
                         </div>
                     </div>
                 </div>
             </div>
+            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#about'">
         </section>
     <script src="JS/index.js"></script>
 </body>
