add some project section

--- a/src/index.html
+++ b/src/index.html
@@ -154,7 +154,56 @@
                     </div>
                 </div>
             </div>
-            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#about'">
+            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#project'">
+        </section>
+        <section id="project">
+            <p class="section__text__p1">Browrse my Recent</p>
+            <h1 class="title">Projects</h1>
+            <div class="experience-details-container">
+                <div class="details-container color-container" >
+                    <div class="article-contianer">
+                        <img src="images/sample-project.png" alt="" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container" >
+                    <div class="article-contianer">
+                        <img src="images/sample-project-2.png" alt="" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+                <div class="details-container color-container" >
+                    <div class="article-contianer">
+                        <img src="images/sample-project-3.png" alt="" class="project-img">
+                    </div>
+                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <div class="btn-container">
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
+                            Github
+                        </button>
+                        <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
+                            Live Demo
+                        </button>
+                    </div>
+                </div>
+            </div>
+            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#contacts'">
         </section>
     <script src="JS/index.js"></script>
 </body>
