--- a/src/index.html
+++ b/src/index.html
@@ -160,6 +160,7 @@
             <p class="section__text__p1">Browrse my Recent</p>
             <h1 class="title">Projects</h1>
             <div class="experience-details-container">
+                <div class="about-containers">
                 <div class="details-container color-container" >
                     <div class="article-contianer">
                         <img src="images/sample-project.png" alt="" class="project-img">
@@ -178,7 +179,7 @@
                     <div class="article-contianer">
                         <img src="images/sample-project-2.png" alt="" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Project Two</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
                             Github
@@ -192,7 +193,7 @@
                     <div class="article-contianer">
                         <img src="images/sample-project-3.png" alt="" class="project-img">
                     </div>
-                    <h2 class="experience-sub-title project-title">Project One</h2>
+                    <h2 class="experience-sub-title project-title">Project Three</h2>
                     <div class="btn-container">
                         <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/Xamilla'">
                             Github
