--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#project">Project</a></li>
-                <li><a href="#contacts">Contacts</a></li>
+                <li><a href="#contact">Contacts</a></li>
             </ul>
         </div>
     </nav>
@@ -32,7 +32,7 @@
                 <li><a href="#about" onclick="toggleMenu">About</a></li>
                 <li><a href="#experince" onclick="toggleMenu">Experience</a></li>
                 <li><a href="#project"onclick="toggleMenu">Project</a></li>
-                <li><a href="#contacts" onclick="toggleMenu">Contacts</a></li>
+                <li><a href="#contact" onclick="toggleMenu">Contacts</a></li>
             </div>
         </div>
     </nav>
@@ -204,6 +204,21 @@
                     </div>
                 </div>
             </div>
+            <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#contact'">
+        </section>
+        <section id="contact">
+                <p class="section__text__p1">Get in Touch</p>
+                <h1 class="title">Contacts Me</h1>
+                <div class="contact-info-upper-container">
+                    <div class="contact-info-container">
+                        <img src="images/email.png" alt="emails icon" class="icon contact-icon email-icon">
+                        <p><a href="camillebarola842@gmail.com">camillebarola842@gmail.com</a></p>
+                    </div>
+                    <div class="contact-info-container">
+                        <img src="images/linkedin.png" alt="linkedin icon" class="icon contact-icon">
+                        <p><a href="linkedin.com">camillebarola</a></p>
+                    </div>
+                </div>
             <img src="images/scroll down.png" alt="scroll down arrow to next page" title="scroll down" class="icon arrow" onclick="location.href='./#contacts'">
         </section>
     <script src="JS/index.js"></script>
